[gd_scene load_steps=2 format=3 uid="uid://cqv5u44ij7yof"]

[ext_resource type="Script" path="res://scripts/boids_component.gd" id="1_8shy5"]

[node name="BoidsComponent" type="CharacterBody2D"]
script = ExtResource("1_8shy5")

[node name="FlockArea" type="Area2D" parent="."]

[connection signal="body_entered" from="FlockArea" to="." method="_on_flockview_body_entered"]
[connection signal="body_exited" from="FlockArea" to="." method="_on_flockview_body_exited"]
